@@ -7,7 +7,7 @@ Maintainer: Deepayan Sarkar <deepayan.sarkar@r-project.org>
 Description: Extra graphical utilities based on lattice
 Depends: R (>= 2.10.0), RColorBrewer, lattice
 Imports: lattice (>= 0.18-1), grid
-Suggests: maps, mapproj, deldir, tripack, quantreg, zoo
+Suggests: maps, mapproj, deldir, tripack, quantreg, zoo, MASS
 URL: http://latticeextra.r-forge.r-project.org/
 LazyLoad: yes
 LazyData: no
